1. projectcontent model 생성 2. collection view클릭시 tableview 생성 3. tableview에 db 값 불러와서 저장(미완)

--- a/CooperationApp/Views/Main.storyboard
+++ b/CooperationApp/Views/Main.storyboard
@@ -226,68 +226,69 @@
             </objects>
             <point key="canvasLocation" x="611.59420289855075" y="833.70535714285711"/>
         </scene>
-        <!--Project Tabbar View Controller-->
-        <scene sceneID="XOx-oY-5N9">
-            <objects>
-                <tabBarController storyboardIdentifier="ProjectTabbarViewController" id="yHQ-I7-Eh0" customClass="ProjectTabbarViewController" customModule="CooperationApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ENJ-OZ-5GS">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <rect key="contentStretch" x="0.0" y="0.0" width="1" height="0.10000000000000001"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="uGr-Vo-KL4" kind="relationship" relationship="viewControllers" id="0gX-Jl-uvn"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Qgf-1V-c0Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1658" y="1638"/>
-        </scene>
         <!--Project View Controller-->
-        <scene sceneID="51i-zm-IKK">
+        <scene sceneID="eAh-t5-yX3">
             <objects>
-                <viewController storyboardIdentifier="ProjectViewController" id="uGr-Vo-KL4" customClass="ProjectViewController" customModule="CooperationApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="oww-Oj-uH2">
+                <viewController storyboardIdentifier="ProjectViewController" id="Kxy-rI-Dt4" customClass="ProjectViewController" customModule="CooperationApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OXo-mG-vC1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="project" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ocg-Rh-edt">
-                                <rect key="frame" x="180" y="437.5" width="54" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1cc-XY-07i">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Gbn-w3-LKI">
+                                <rect key="frame" x="0.0" y="104" width="414" height="758"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="uAh-9b-GDY">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uAh-9b-GDY" id="KOT-YG-XDe">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pfl-R7-I51">
                                 <rect key="frame" x="10" y="54" width="37" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="chevron.backward" catalog="system">
-                                    <color key="baseForegroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="baseForegroundColor" red="0.64705882349999999" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="backButton:" destination="uGr-Vo-KL4" eventType="touchUpInside" id="cGt-qA-E6J"/>
+                                    <action selector="backButton:" destination="Kxy-rI-Dt4" eventType="touchUpInside" id="dya-su-OMk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aq2-E4-0er">
+                                <rect key="frame" x="360.5" y="54" width="43.5" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system">
+                                    <color key="baseForegroundColor" red="0.64705882349999999" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="addTableView:" destination="Kxy-rI-Dt4" eventType="touchUpInside" id="Vn4-PX-Ctr"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="aby-OK-1pS"/>
+                        <viewLayoutGuide key="safeArea" id="r4T-PV-xgh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="1cc-XY-07i" firstAttribute="top" secondItem="aby-OK-1pS" secondAttribute="top" constant="10" id="dH1-wy-tYd"/>
-                            <constraint firstItem="1cc-XY-07i" firstAttribute="leading" secondItem="aby-OK-1pS" secondAttribute="leading" constant="10" id="h5f-IA-T9J"/>
+                            <constraint firstItem="r4T-PV-xgh" firstAttribute="trailing" secondItem="aq2-E4-0er" secondAttribute="trailing" constant="10" id="22X-KO-sOD"/>
+                            <constraint firstItem="r4T-PV-xgh" firstAttribute="trailing" secondItem="Gbn-w3-LKI" secondAttribute="trailing" id="DUP-Ym-kHL"/>
+                            <constraint firstItem="pfl-R7-I51" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="10" id="Gk7-6z-9c7"/>
+                            <constraint firstItem="aq2-E4-0er" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="10" id="LMI-qH-3FV"/>
+                            <constraint firstItem="Gbn-w3-LKI" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="60" id="Pye-fz-Evb"/>
+                            <constraint firstItem="Gbn-w3-LKI" firstAttribute="leading" secondItem="r4T-PV-xgh" secondAttribute="leading" id="bth-xU-raJ"/>
+                            <constraint firstItem="pfl-R7-I51" firstAttribute="leading" secondItem="r4T-PV-xgh" secondAttribute="leading" constant="10" id="dQq-EN-arH"/>
+                            <constraint firstItem="r4T-PV-xgh" firstAttribute="bottom" secondItem="Gbn-w3-LKI" secondAttribute="bottom" id="ftj-Oo-S5z"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" id="CFg-eb-oyI">
-                        <color key="badgeColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <offsetWrapper key="titlePositionAdjustment" horizontal="-5" vertical="1"/>
-                    </tabBarItem>
                     <connections>
-                        <outlet property="pratice" destination="Ocg-Rh-edt" id="EaL-lv-8y9"/>
+                        <outlet property="tableView" destination="Gbn-w3-LKI" id="dlH-Ul-7Oy"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JaU-81-kOj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JLC-Md-5nE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1658" y="2376"/>
+            <point key="canvasLocation" x="3183" y="1718"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="pu0-cO-cwD">
@@ -585,6 +586,7 @@
         <image name="message.fill" catalog="system" width="128" height="113"/>
         <image name="person" catalog="system" width="128" height="117"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
         <image name="square.grid.2x2" width="128" height="128"/>
         <image name="square.grid.2x2.fill" catalog="system" width="128" height="114"/>
         <image name="star" catalog="system" width="128" height="116"/>
