--- a/CooperationApp/Views/Main.storyboard
+++ b/CooperationApp/Views/Main.storyboard
@@ -235,7 +235,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Gbn-w3-LKI">
-                                <rect key="frame" x="0.0" y="124" width="414" height="707"/>
+                                <rect key="frame" x="0.0" y="144" width="414" height="687"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="uAh-9b-GDY">
@@ -259,7 +259,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aq2-E4-0er">
-                                <rect key="frame" x="360.5" y="54" width="43.5" height="31"/>
+                                <rect key="frame" x="324" y="54" width="43.5" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system">
                                     <color key="baseForegroundColor" red="0.64705882349999999" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -293,9 +293,23 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q3q-57-utG">
-                                <rect key="frame" x="186.5" y="85" width="41.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iir-tl-inD">
+                                <rect key="frame" x="284" y="54" width="42.5" height="31"/>
+                                <color key="tintColor" red="0.64705882349999999" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="pencil" catalog="system">
+                                    <color key="baseForegroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hvh-Mn-QeN">
+                                <rect key="frame" x="360" y="54" width="44" height="31"/>
+                                <color key="tintColor" red="0.64705882349999999" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="list.bullet.rectangle.portrait" catalog="system"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q3q-57-utG">
+                                <rect key="frame" x="20" y="105" width="37" height="24"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -303,17 +317,21 @@
                         <viewLayoutGuide key="safeArea" id="r4T-PV-xgh"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="r4T-PV-xgh" firstAttribute="trailing" secondItem="aq2-E4-0er" secondAttribute="trailing" constant="10" id="22X-KO-sOD"/>
+                            <constraint firstItem="q3q-57-utG" firstAttribute="leading" secondItem="r4T-PV-xgh" secondAttribute="leading" constant="20" id="2ps-Vp-0sa"/>
                             <constraint firstItem="r4T-PV-xgh" firstAttribute="trailing" secondItem="Gbn-w3-LKI" secondAttribute="trailing" id="DUP-Ym-kHL"/>
+                            <constraint firstItem="aq2-E4-0er" firstAttribute="leading" secondItem="iir-tl-inD" secondAttribute="trailing" constant="-2.5" id="E1O-4S-wL4"/>
+                            <constraint firstItem="q3q-57-utG" firstAttribute="top" secondItem="pfl-R7-I51" secondAttribute="bottom" constant="20" id="E6w-8v-Be3"/>
                             <constraint firstItem="pfl-R7-I51" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="10" id="Gk7-6z-9c7"/>
                             <constraint firstItem="Utg-mR-brP" firstAttribute="leading" secondItem="r4T-PV-xgh" secondAttribute="leading" id="Jd7-Vb-YU3"/>
-                            <constraint firstItem="aq2-E4-0er" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="10" id="LMI-qH-3FV"/>
-                            <constraint firstItem="Gbn-w3-LKI" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="80" id="Pye-fz-Evb"/>
-                            <constraint firstItem="q3q-57-utG" firstAttribute="centerX" secondItem="OXo-mG-vC1" secondAttribute="centerX" id="WlH-3E-LRt"/>
+                            <constraint firstItem="Gbn-w3-LKI" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="100" id="Pye-fz-Evb"/>
+                            <constraint firstItem="hvh-Mn-QeN" firstAttribute="leading" secondItem="aq2-E4-0er" secondAttribute="trailing" constant="-7.5" id="YTF-5g-oX4"/>
+                            <constraint firstItem="hvh-Mn-QeN" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="10" id="Z6G-5n-AsZ"/>
                             <constraint firstItem="Gbn-w3-LKI" firstAttribute="leading" secondItem="r4T-PV-xgh" secondAttribute="leading" id="bth-xU-raJ"/>
+                            <constraint firstItem="aq2-E4-0er" firstAttribute="centerY" secondItem="hvh-Mn-QeN" secondAttribute="centerY" id="cPl-yo-gAA"/>
                             <constraint firstItem="pfl-R7-I51" firstAttribute="leading" secondItem="r4T-PV-xgh" secondAttribute="leading" constant="10" id="dQq-EN-arH"/>
+                            <constraint firstItem="iir-tl-inD" firstAttribute="centerY" secondItem="aq2-E4-0er" secondAttribute="centerY" id="hyD-uQ-CPY"/>
+                            <constraint firstItem="r4T-PV-xgh" firstAttribute="trailing" secondItem="hvh-Mn-QeN" secondAttribute="trailing" constant="10" id="pAc-Gg-UHH"/>
                             <constraint firstItem="Utg-mR-brP" firstAttribute="bottom" secondItem="r4T-PV-xgh" secondAttribute="bottom" id="tTJ-A3-64E"/>
-                            <constraint firstItem="q3q-57-utG" firstAttribute="top" secondItem="r4T-PV-xgh" secondAttribute="top" constant="41" id="wrg-2U-dHg"/>
                             <constraint firstItem="r4T-PV-xgh" firstAttribute="trailing" secondItem="Utg-mR-brP" secondAttribute="trailing" id="y8c-WE-KEv"/>
                             <constraint firstItem="Utg-mR-brP" firstAttribute="top" secondItem="Gbn-w3-LKI" secondAttribute="bottom" id="yRR-HS-kKW"/>
                         </constraints>
@@ -325,7 +343,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JLC-Md-5nE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3182.608695652174" y="1717.6339285714284"/>
+            <point key="canvasLocation" x="1657.9710144927537" y="1633.9285714285713"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="pu0-cO-cwD">
@@ -560,10 +578,10 @@
                                     <constraint firstAttribute="height" constant="50" id="tu2-Dg-KsH"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hLH-5K-JDZ">
-                                <rect key="frame" x="357" y="56" width="45" height="31"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hLH-5K-JDZ">
+                                <rect key="frame" x="358.5" y="56" width="43.5" height="31"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <buttonConfiguration key="configuration" style="plain"/>
+                                <buttonConfiguration key="configuration" style="plain" image="plus" catalog="system"/>
                                 <connections>
                                     <action selector="addProjectButtonTap:" destination="UAM-km-w7Y" eventType="touchUpInside" id="7In-Z2-Ygv"/>
                                 </connections>
@@ -619,10 +637,12 @@
         <image name="arrowshape.turn.up.right.fill" catalog="system" width="128" height="106"/>
         <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <image name="google.png" width="18" height="18"/>
+        <image name="list.bullet.rectangle.portrait" catalog="system" width="115" height="128"/>
         <image name="logo" width="570" height="252"/>
         <image name="logo_google" width="33.333332061767578" height="33.333332061767578"/>
         <image name="message" catalog="system" width="128" height="113"/>
         <image name="message.fill" catalog="system" width="128" height="113"/>
+        <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="person" catalog="system" width="128" height="117"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="plus" catalog="system" width="128" height="113"/>
