--- a/CooperationApp/Views/Main.storyboard
+++ b/CooperationApp/Views/Main.storyboard
@@ -265,7 +265,7 @@
                                     <color key="baseForegroundColor" red="0.64705882349999999" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="addTableView:" destination="Kxy-rI-Dt4" eventType="touchUpInside" id="Vn4-PX-Ctr"/>
+                                    <action selector="addCardView:" destination="Kxy-rI-Dt4" eventType="touchUpInside" id="4Ig-CZ-lhJ"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="113" translatesAutoresizingMaskIntoConstraints="NO" id="Utg-mR-brP">
@@ -297,15 +297,21 @@
                                 <rect key="frame" x="284" y="54" width="42.5" height="31"/>
                                 <color key="tintColor" red="0.64705882349999999" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="pencil" catalog="system">
+                                <buttonConfiguration key="configuration" style="plain" image="pencil" catalog="system" title="">
                                     <color key="baseForegroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="cardEditButton:" destination="Kxy-rI-Dt4" eventType="touchUpInside" id="4eP-Tp-vIv"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hvh-Mn-QeN">
                                 <rect key="frame" x="360" y="54" width="44" height="31"/>
                                 <color key="tintColor" red="0.64705882349999999" green="0.64705882349999999" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="list.bullet.rectangle.portrait" catalog="system"/>
+                                <connections>
+                                    <action selector="addListButton:" destination="Kxy-rI-Dt4" eventType="touchUpInside" id="gRs-rv-LPx"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q3q-57-utG">
                                 <rect key="frame" x="20" y="105" width="37" height="24"/>
