--- a/CooperationApp/Views/Cell/ProjectContentCell.xib
+++ b/CooperationApp/Views/Cell/ProjectContentCell.xib
@@ -8,30 +8,32 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="129" id="g4S-8p-Ihf" customClass="ProjectContentTableViewCell" customModule="CooperationApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="129"/>
-            <autoresizingMask key="autoresizingMask"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="g4S-8p-Ihf" customClass="ProjectContentTableViewCell" customModule="CooperationApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
+            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="ProjectContetnCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="g4S-8p-Ihf" id="hte-pL-Qe1">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="129"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="662-q6-dlu">
-                        <rect key="frame" x="10" y="20" width="42" height="89"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="662-q6-dlu">
+                        <rect key="frame" x="10" y="20" width="394" height="50"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" red="0.97924558080808077" green="0.97924558080808077" blue="0.97924558080808077" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="662-q6-dlu" secondAttribute="bottom" constant="20" id="CnN-Bh-8uI"/>
-                    <constraint firstItem="662-q6-dlu" firstAttribute="leading" secondItem="hte-pL-Qe1" secondAttribute="leading" constant="10" id="Qno-Ru-D6I"/>
-                    <constraint firstItem="662-q6-dlu" firstAttribute="top" secondItem="hte-pL-Qe1" secondAttribute="top" constant="20" id="fEh-Do-e3F"/>
+                    <constraint firstAttribute="trailing" secondItem="662-q6-dlu" secondAttribute="trailing" constant="10" id="6zT-sh-jwd"/>
+                    <constraint firstItem="662-q6-dlu" firstAttribute="top" secondItem="hte-pL-Qe1" secondAttribute="top" constant="20" id="Z4y-Kj-lAk"/>
+                    <constraint firstItem="662-q6-dlu" firstAttribute="leading" secondItem="hte-pL-Qe1" secondAttribute="leading" constant="10" id="gGd-jM-4JM"/>
+                    <constraint firstAttribute="bottom" secondItem="662-q6-dlu" secondAttribute="bottom" constant="20" id="sGk-l1-f8H"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="content" destination="662-q6-dlu" id="lKF-46-5jo"/>
             </connections>
-            <point key="canvasLocation" x="124.6376811594203" y="99.441964285714278"/>
+            <point key="canvasLocation" x="124.6376811594203" y="99.107142857142847"/>
         </tableViewCell>
     </objects>
 </document>
