--- a/CooperationApp/Views/Cell/ProjectContentCell.xib
+++ b/CooperationApp/Views/Cell/ProjectContentCell.xib
@@ -21,11 +21,20 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YsS-BK-L6O">
+                        <rect key="frame" x="10" y="20" width="394" height="50"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits"/>
+                    </textField>
                 </subviews>
                 <color key="backgroundColor" red="0.97924558080808077" green="0.97924558080808077" blue="0.97924558080808077" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
+                    <constraint firstItem="YsS-BK-L6O" firstAttribute="leading" secondItem="hte-pL-Qe1" secondAttribute="leading" constant="10" id="6aa-a3-17c"/>
                     <constraint firstAttribute="trailing" secondItem="662-q6-dlu" secondAttribute="trailing" constant="10" id="6zT-sh-jwd"/>
+                    <constraint firstAttribute="trailing" secondItem="YsS-BK-L6O" secondAttribute="trailing" constant="10" id="8JM-aa-57J"/>
+                    <constraint firstAttribute="bottom" secondItem="YsS-BK-L6O" secondAttribute="bottom" constant="20" id="9GQ-S6-824"/>
                     <constraint firstItem="662-q6-dlu" firstAttribute="top" secondItem="hte-pL-Qe1" secondAttribute="top" constant="20" id="Z4y-Kj-lAk"/>
+                    <constraint firstItem="YsS-BK-L6O" firstAttribute="top" secondItem="hte-pL-Qe1" secondAttribute="top" constant="20" id="epI-X7-7av"/>
                     <constraint firstItem="662-q6-dlu" firstAttribute="leading" secondItem="hte-pL-Qe1" secondAttribute="leading" constant="10" id="gGd-jM-4JM"/>
                     <constraint firstAttribute="bottom" secondItem="662-q6-dlu" secondAttribute="bottom" constant="20" id="sGk-l1-f8H"/>
                 </constraints>
