--- a/CooperationApp/Views/Cell/ProjectContentCell.xib
+++ b/CooperationApp/Views/Cell/ProjectContentCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,28 +22,65 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YsS-BK-L6O">
-                        <rect key="frame" x="10" y="20" width="394" height="50"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits"/>
-                    </textField>
+                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Zyr-Jx-Ih2">
+                        <rect key="frame" x="10" y="0.0" width="394" height="90"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ro2-9R-EIC">
+                                <rect key="frame" x="5" y="29.5" width="40.5" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="restart" catalog="system"/>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkv-sN-dQ8">
+                                <rect key="frame" x="50.5" y="0.0" width="10" height="90"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S5P-0k-wO7">
+                                <rect key="frame" x="65.5" y="29.5" width="40.5" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="play" catalog="system"/>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="hkv-sN-dQ8" secondAttribute="bottom" id="BNN-Ju-9c4"/>
+                            <constraint firstAttribute="trailing" secondItem="S5P-0k-wO7" secondAttribute="trailing" constant="5" id="QzA-Mf-UCi"/>
+                            <constraint firstItem="hkv-sN-dQ8" firstAttribute="leading" secondItem="ro2-9R-EIC" secondAttribute="trailing" constant="5" id="dr7-uH-VnS"/>
+                            <constraint firstItem="hkv-sN-dQ8" firstAttribute="top" secondItem="Zyr-Jx-Ih2" secondAttribute="top" id="fMZ-ky-T0v"/>
+                            <constraint firstItem="ro2-9R-EIC" firstAttribute="leading" secondItem="Zyr-Jx-Ih2" secondAttribute="leading" constant="5" id="lff-Zw-tTB"/>
+                            <constraint firstItem="S5P-0k-wO7" firstAttribute="leading" secondItem="hkv-sN-dQ8" secondAttribute="trailing" constant="5" id="xlP-uY-RsZ"/>
+                        </constraints>
+                    </stackView>
                 </subviews>
                 <color key="backgroundColor" red="0.97924558080808077" green="0.97924558080808077" blue="0.97924558080808077" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
-                    <constraint firstItem="YsS-BK-L6O" firstAttribute="leading" secondItem="hte-pL-Qe1" secondAttribute="leading" constant="10" id="6aa-a3-17c"/>
+                    <constraint firstAttribute="trailing" secondItem="Zyr-Jx-Ih2" secondAttribute="trailing" constant="10" id="5Lc-JM-Zre"/>
                     <constraint firstAttribute="trailing" secondItem="662-q6-dlu" secondAttribute="trailing" constant="10" id="6zT-sh-jwd"/>
-                    <constraint firstAttribute="trailing" secondItem="YsS-BK-L6O" secondAttribute="trailing" constant="10" id="8JM-aa-57J"/>
-                    <constraint firstAttribute="bottom" secondItem="YsS-BK-L6O" secondAttribute="bottom" constant="20" id="9GQ-S6-824"/>
+                    <constraint firstAttribute="bottom" secondItem="Zyr-Jx-Ih2" secondAttribute="bottom" id="PKK-ry-LdE"/>
                     <constraint firstItem="662-q6-dlu" firstAttribute="top" secondItem="hte-pL-Qe1" secondAttribute="top" constant="20" id="Z4y-Kj-lAk"/>
-                    <constraint firstItem="YsS-BK-L6O" firstAttribute="top" secondItem="hte-pL-Qe1" secondAttribute="top" constant="20" id="epI-X7-7av"/>
+                    <constraint firstItem="Zyr-Jx-Ih2" firstAttribute="leading" secondItem="hte-pL-Qe1" secondAttribute="leading" constant="10" id="fGu-1E-gn8"/>
                     <constraint firstItem="662-q6-dlu" firstAttribute="leading" secondItem="hte-pL-Qe1" secondAttribute="leading" constant="10" id="gGd-jM-4JM"/>
+                    <constraint firstItem="Zyr-Jx-Ih2" firstAttribute="top" secondItem="hte-pL-Qe1" secondAttribute="top" id="loR-Sq-t7B"/>
                     <constraint firstAttribute="bottom" secondItem="662-q6-dlu" secondAttribute="bottom" constant="20" id="sGk-l1-f8H"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="content" destination="662-q6-dlu" id="lKF-46-5jo"/>
+                <outlet property="contentLabel" destination="662-q6-dlu" id="ZOO-Oc-p5v"/>
+                <outlet property="contentTextView" destination="hkv-sN-dQ8" id="RzE-bH-eYM"/>
+                <outlet property="editModeStackView" destination="Zyr-Jx-Ih2" id="Cnp-2e-iW5"/>
             </connections>
             <point key="canvasLocation" x="124.6376811594203" y="99.107142857142847"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="play" catalog="system" width="120" height="128"/>
+        <image name="restart" catalog="system" width="120" height="128"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
