--- a/CooperationApp/Views/Main.storyboard
+++ b/CooperationApp/Views/Main.storyboard
@@ -346,7 +346,10 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addCardButton" destination="aq2-E4-0er" id="PMT-ea-8or"/>
+                        <outlet property="addListButton" destination="hvh-Mn-QeN" id="ipw-nK-cyW"/>
                         <outlet property="contentTitleLabel" destination="q3q-57-utG" id="nb9-nu-voV"/>
+                        <outlet property="editButton" destination="iir-tl-inD" id="KlH-QM-AMs"/>
                         <outlet property="tableView" destination="Gbn-w3-LKI" id="dlH-Ul-7Oy"/>
                     </connections>
                 </viewController>
