--- a/CooperationApp/Views/Cell/ProjectContentCell.xib
+++ b/CooperationApp/Views/Cell/ProjectContentCell.xib
@@ -1,68 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="g4S-8p-Ihf" customClass="ProjectContentTableViewCell" customModule="CooperationApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="150" id="g4S-8p-Ihf" customClass="ProjectContentTableViewCell" customModule="CooperationApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="ProjectContetnCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="g4S-8p-Ihf" id="hte-pL-Qe1">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="662-q6-dlu">
-                        <rect key="frame" x="10" y="20" width="394" height="50"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="662-q6-dlu">
+                        <rect key="frame" x="10" y="20" width="394" height="110"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Zyr-Jx-Ih2">
-                        <rect key="frame" x="10" y="0.0" width="394" height="90"/>
+                        <rect key="frame" x="10" y="0.0" width="394" height="150"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ro2-9R-EIC">
-                                <rect key="frame" x="5" y="29.5" width="40.5" height="31"/>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ro2-9R-EIC">
+                                <rect key="frame" x="5" y="0.0" width="40.5" height="150"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="restart" catalog="system"/>
+                                <buttonConfiguration key="configuration" style="plain" image="restart" catalog="system" title=""/>
+                                <connections>
+                                    <action selector="moveContentLeftButton:" destination="g4S-8p-Ihf" eventType="touchUpInside" id="qg8-TE-XS6"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkv-sN-dQ8">
-                                <rect key="frame" x="50.5" y="0.0" width="10" height="90"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="textColor" systemColor="labelColor"/>
+                                <rect key="frame" x="50.5" y="0.0" width="10" height="150"/>
+                                <color key="backgroundColor" red="0.97924558080000002" green="0.97924558080000002" blue="0.97924558080000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S5P-0k-wO7">
-                                <rect key="frame" x="65.5" y="29.5" width="40.5" height="31"/>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" restorationIdentifier="moveRightContent" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S5P-0k-wO7">
+                                <rect key="frame" x="65.5" y="0.0" width="40.5" height="150"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="play" catalog="system"/>
+                                <connections>
+                                    <action selector="moveContentRightButton:" destination="g4S-8p-Ihf" eventType="touchUpInside" id="j8p-kI-pd5"/>
+                                </connections>
                             </button>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="S5P-0k-wO7" firstAttribute="top" secondItem="Zyr-Jx-Ih2" secondAttribute="top" id="6ys-N6-XUt"/>
+                            <constraint firstAttribute="bottom" secondItem="ro2-9R-EIC" secondAttribute="bottom" id="AHn-jv-efc"/>
                             <constraint firstAttribute="bottom" secondItem="hkv-sN-dQ8" secondAttribute="bottom" id="BNN-Ju-9c4"/>
                             <constraint firstAttribute="trailing" secondItem="S5P-0k-wO7" secondAttribute="trailing" constant="5" id="QzA-Mf-UCi"/>
-                            <constraint firstItem="hkv-sN-dQ8" firstAttribute="leading" secondItem="ro2-9R-EIC" secondAttribute="trailing" constant="5" id="dr7-uH-VnS"/>
+                            <constraint firstItem="hkv-sN-dQ8" firstAttribute="leading" secondItem="ro2-9R-EIC" secondAttribute="trailing" priority="996" constant="5" id="dr7-uH-VnS"/>
                             <constraint firstItem="hkv-sN-dQ8" firstAttribute="top" secondItem="Zyr-Jx-Ih2" secondAttribute="top" id="fMZ-ky-T0v"/>
+                            <constraint firstItem="ro2-9R-EIC" firstAttribute="top" secondItem="Zyr-Jx-Ih2" secondAttribute="top" id="ixL-38-HQh"/>
                             <constraint firstItem="ro2-9R-EIC" firstAttribute="leading" secondItem="Zyr-Jx-Ih2" secondAttribute="leading" constant="5" id="lff-Zw-tTB"/>
-                            <constraint firstItem="S5P-0k-wO7" firstAttribute="leading" secondItem="hkv-sN-dQ8" secondAttribute="trailing" constant="5" id="xlP-uY-RsZ"/>
+                            <constraint firstAttribute="bottom" secondItem="S5P-0k-wO7" secondAttribute="bottom" id="m58-2t-3Mv"/>
+                            <constraint firstItem="S5P-0k-wO7" firstAttribute="leading" secondItem="hkv-sN-dQ8" secondAttribute="trailing" priority="996" constant="5" id="xlP-uY-RsZ"/>
                         </constraints>
                     </stackView>
                 </subviews>
                 <color key="backgroundColor" red="0.97924558080808077" green="0.97924558080808077" blue="0.97924558080808077" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="Zyr-Jx-Ih2" secondAttribute="trailing" constant="10" id="5Lc-JM-Zre"/>
-                    <constraint firstAttribute="trailing" secondItem="662-q6-dlu" secondAttribute="trailing" constant="10" id="6zT-sh-jwd"/>
+                    <constraint firstAttribute="trailing" secondItem="662-q6-dlu" secondAttribute="trailing" priority="996" constant="10" id="6zT-sh-jwd"/>
                     <constraint firstAttribute="bottom" secondItem="Zyr-Jx-Ih2" secondAttribute="bottom" id="PKK-ry-LdE"/>
                     <constraint firstItem="662-q6-dlu" firstAttribute="top" secondItem="hte-pL-Qe1" secondAttribute="top" constant="20" id="Z4y-Kj-lAk"/>
                     <constraint firstItem="Zyr-Jx-Ih2" firstAttribute="leading" secondItem="hte-pL-Qe1" secondAttribute="leading" constant="10" id="fGu-1E-gn8"/>
                     <constraint firstItem="662-q6-dlu" firstAttribute="leading" secondItem="hte-pL-Qe1" secondAttribute="leading" constant="10" id="gGd-jM-4JM"/>
                     <constraint firstItem="Zyr-Jx-Ih2" firstAttribute="top" secondItem="hte-pL-Qe1" secondAttribute="top" id="loR-Sq-t7B"/>
-                    <constraint firstAttribute="bottom" secondItem="662-q6-dlu" secondAttribute="bottom" constant="20" id="sGk-l1-f8H"/>
+                    <constraint firstAttribute="bottom" secondItem="662-q6-dlu" secondAttribute="bottom" constant="20" id="z0F-pF-7zN"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -76,11 +86,5 @@
     <resources>
         <image name="play" catalog="system" width="120" height="128"/>
         <image name="restart" catalog="system" width="120" height="128"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
